--- a/clients/cronos/applications/online_review/branches/testing_version-2.2_20070321/scripts/auto_pilot/build.xml
+++ b/clients/cronos/applications/online_review/branches/testing_version-2.2_20070321/scripts/auto_pilot/build.xml
@@ -477,6 +477,7 @@
 		    	<include name="**/*.properties"/>
     		</patternset>
     	</unjar>
+		<chmod dir="." perm="u+x" includes="**/*.sh"/>
 	</target>
 
     <target name="clean">
