add execution permission to *.sh

--- a/clients/cronos/applications/online_review/branches/testing_version-2.2_20070321/scripts/auto_screening/build.xml
+++ b/clients/cronos/applications/online_review/branches/testing_version-2.2_20070321/scripts/auto_screening/build.xml
@@ -327,6 +327,7 @@
 		    	<include  name="**/*.dtd"/>
     		</patternset>
     	</unjar>
+		<chmod dir="." perm="u+x" includes="**/*.sh"/>
 	</target>
 	
 
