--- a/clients/cronos/applications/online_review/branches/bugfix-6567/.classpath
+++ b/clients/cronos/applications/online_review/branches/bugfix-6567/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.generic.runtimeTarget/JBoss v4.0"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/authentication_factory/2.0/authentication_factory.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tcs/auto_pilot/1.0/auto_pilot.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/auto_screening_management/1.0/auto_screening_management.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/base_exception/1.0/base_exception.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/class_associations/1.0/class_associations.jar"/>
@@ -31,6 +32,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/tcs/online_review_deliverables/1.0/online_review_deliverables.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/online_review_login/1.0/online_review_login.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/online_review_phases/1.0.2/online_review_phases.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tcs/pacts_services/PactsServices.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/phase_management/1.0.3/phase_management.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/phase_management_persistence/1.0/phase_management_persistence.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/project_management/1.0/project_management.jar"/>
@@ -54,6 +56,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/tcs/user_project_data_store/1.0.1/user_project_data_store.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/weighted_calculator/1.0/weighted_calculator.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/workdays/1.0/workdays.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tcs/shared.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/tcsUtil.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcs/tcwebcommon.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/third_party/antlr.jar"/>
@@ -70,7 +73,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/third_party/standard.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/third_party/struts-1.2.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/third_party/struts-el.jar"/>
-	<classpathentry kind="lib" path="lib/tcs/shared.jar"/>
 	<classpathentry kind="lib" path="lib/third_party/testing/aspectjrt-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/third_party/testing/cactus-1.7.2.jar"/>
 	<classpathentry kind="lib" path="lib/third_party/testing/cactus-ant-1.7.2.jar"/>
