Added messages for the Autopilot status display.

--- a/clients/cronos/applications/online_review/branches/bugfix-6567/conf/MessageResources.properties
+++ b/clients/cronos/applications/online_review/branches/bugfix-6567/conf/MessageResources.properties
@@ -40,6 +40,8 @@ global.DeadlineNear=Deadline near
 global.Late=Late
 global.answer.No=No
 global.answer.Yes=Yes
+global.option.On=On
+global.option.Off=Off
 
 global.Timezone.EST=EST
 
@@ -425,6 +427,7 @@ viewProjectDetails.box.Approval.ViewResults=View Results
 viewProjectDetails.PhaseNotOpen=This Phase is not yet Open.
 viewProjectDetails.ProjectDetails=Project Details
 viewProjectDetails.SVNModule=SVN Module:
+viewProjectDetails.AutopilotStatus=Autopilot for this project is:
 viewProjectDetails.box.Resources=Resources
 viewProjectDetails.Resource.Role=Role
 viewProjectDetails.Resource.Name=Name
