Added messages that define titles for the pages.

--- a/clients/cronos/applications/online_review/branches/bugfix-6564/conf/MessageResources.properties
+++ b/clients/cronos/applications/online_review/branches/bugfix-6564/conf/MessageResources.properties
@@ -1,6 +1,5 @@
 #  -----  Commonly used messages  -----
 OnlineReviewApp.title=Online Review
-OnlineReviewApp.Credits.title=Online Review Credits
 clickHere=click here
 linkHere=here
 NotApplicable=N/A
@@ -27,6 +26,10 @@ btnDelete.alt=Cancel
 
 
 #  -----  Global messages  -----
+global.title.level1={0}
+global.title.level2={0} - {1}
+global.title.level2.noDash={0} {1}
+global.title.level3={0} - {1} - {2}
 global.version=version
 global.version.shortened=v
 global.expandAll=Expand All
@@ -228,6 +231,9 @@ login.registerNow=Register now.
 login.afterYouCompleteTheRegProcess=After you complete the registration process, we will send your account activation code via email.
 
 #  -----  Page jsp/listProjects.jsp  -----
+listProjects.title.MyProjects=My Open Projects
+listProjects.title.AllProjects=All Open Projects
+listProjects.title.InactiveProjects=Inactive Projects
 listProjects.tblHeader.Project=Project
 listProjects.tblHeader.MyRole=My Role
 listProjects.tblHeader.Phase=Phase
@@ -239,6 +245,7 @@ listProjects.NoProjects.inactive=You currently have no inactive projects.
 listProjects.NoProjects.Category=You currently have no open Projects in this Category.
 
 #  -----  Page jsp/editProject.jsp  -----
+editProject.title.CreateNew=Create New Project
 editProject.ProjectDetails.title=Project Details
 editProject.ProjectDetails.Name=Name:
 editProject.ProjectDetails.Type=Type:
@@ -438,6 +445,7 @@ viewProjectDetails.btnEdit.alt=Edit Project
 viewProjectDetails.btnEdit.img=/i/or/bttn_edit_project.gif
 
 #  -----  Page /jsp/contactManager.jsp  -----
+contactManager.title=Contact Project Manager
 contactManager.Contact=Contact
 contactManager.Category=Category:
 contactManager.Category.no=Select
@@ -447,6 +455,7 @@ contactManager.Category.Complaint=Complaint
 contactManager.Category.Other=Other
 
 #  -----  Page /jsp/uploadSubmission.jsp  -----
+uploadSubmission.title=Upload Your Submission
 uploadSubmission.box.UploadSubmission=Upload Submission
 uploadSubmission.UploadSubmission=Upload Submission:
 uploadSubmission.HelpLine1=Once your submission has been uploaded, it will be processed by our automatic screening process.  Additional help with the screening process can be found
@@ -456,6 +465,7 @@ uploadSubmission.SampleSubmissionAndDocs=sample submission and documentation
 uploadSubmission.HelpLine4=are available on TopCoder.com
 
 #  -----  Page /jsp/uploadFinalFix.jsp  -----
+uploadFinalFix.title=Upload Final Fix
 uploadFinalFix.box.UploadFinalFix=Upload Final Fix
 uploadFinalFix.UploadFinalFix=Upload Final Fix:
 uploadFinalFix.HelpLine1=Once your fix has has been uploaded, it will be processed by our automatic screening process.  Additional help with the screening process can be found
@@ -465,16 +475,25 @@ uploadFinalFix.SampleSubmissionAndDocs=sample submission and documentation
 uploadFinalFix.HelpLine4=are available on TopCoder.com
 
 #  -----  Page /jsp/uploadTestCase.jsp  -----
+uploadTestCase.title=Upload Test Cases
 uploadTestCase.box.UploadTestCase=Upload Test Case
 uploadTestCase.UploadTestCase=Upload Test Case:
 
 #  -----  Page /jsp/confirmDeleteSubmission.jsp  -----
+confirmDeleteSubmission.title=Submission Deletion Confirmation
 confirmDeleteSubmission.box.title=Delete Submission Confirmation
 confirmDeleteSubmission.question=Do you confirm deleting this submission?
 confirmDeleteSubmission.btnDelete.img=/i/or/bttn_delete.gif
 confirmDeleteSubmission.btnDelete.alt=Delete Submission
 
 #  -----  Pages /jsp/editReview.jsp & /jsp/viewReview.jsp & /jsp/editAggregation.jsp -----
+viewReview.title.Screening=Screening Scorecard
+viewReview.title.Review=Review Scorecard
+viewReview.title.Approval=Approval Scorecard
+viewCompositeScorecard.title=Composite Review Scorecard
+editReview.title.Screening=Screening Scorecard Submission
+editReview.title.Review=Review Scorecard Submission
+editReview.title.Approval=Approval Scorecard Submission
 editReview.EditScorecard=Edit Scorecard
 editReview.Screener=Screener:
 editReview.Reviewer=Reviewer:
@@ -541,6 +560,7 @@ editReview.Appeal.Resolved.Failed=Resolved (Failed)
 editReview.Appeal.Unresolved=Unresolved
 
 #  -----  /jsp/reviewCommitted.jsp  -----
+reviewCommitted.title=Scorecard Committed
 reviewCommitted.Committed=Scorecard has been committed
 reviewCommitted.Score=Scorecard's score is:
 reviewCommitted.ReturnToProjDet.alt=Return to Project Details
@@ -549,14 +569,18 @@ reviewCommitted.ViewScorecard.alt=View Completed Scorecard
 reviewCommitted.ViewScorecard.img=/i/or/bttn_view_completed_scoreca.gif
 
 #  -----  /jsp/viewAutoScreening.jsp page  -----
+viewAutoScreening.title=Auto Screening Results
 viewAutoScreening.Warnings=Automated Screening Warnings
 viewAutoScreening.ScreeningResponses=Screening Responses
 
 #  -----  /jsp/viewAggregation.jsp page  -----
+editAggregation.title=Aggregation Scorecard Submission
+viewAggregation.title=Aggregation Scorecard
 viewAggregation.AggregationWorksheet=Aggregation Worksheet
 viewAggregation.AggregatorResponse=Aggregator Response:
 
 #  -----  /jsp/editAggregationReview.jsp page  -----
+editAggregationReview.title=Aggregation Review Submission
 editAggregationReview.Scorecard.title=Aggregation Review Scorecard
 editAggregationReview.Function.Accept=Accept
 editAggregationReview.Function.Reject=Reject
@@ -564,16 +588,20 @@ editAggregationReview.EnterComment=<b>Please enter your comment for the above it
 editAggregationReview.BeforeReject=You are about to reject Aggregation worksheet.\\nDo you really want to do that?
 
 #  -----  /jsp/viewAggregationReview.jsp page  -----
+viewAggregationReview.title=Aggregation Review
 viewAggregationReview.Response=Response:
 viewAggregationReview.Comment=Comment
 
 #  -----  /jsp/editFinalReview.jsp page  -----
+viewFinalReview.title=Final Review Scorecard
+editFinalReview.title=Final Review Scorecard Submission
 editFinalReview.Scorecard.title=Final Review Scorecard
 editFinalReview.box.Approval=Approval
 editFinalReview.ApproveFinalFixes=Approve Final Fixes
 editFinalReview.BeforeReject=You are about to reject Final Fix.\\nDo you really want to do that?
 
 #  -----  /jsp/credits.jsp page  -----
+credits.title=Credits
 credits.SubTitle=Credits
 credits.QA=Quality Assurance
 credits.Architect=Architect
@@ -601,6 +629,7 @@ exception.com.cronos.onlinereview.login.LoginActions.login.AuthResponseParserExc
 exception.com.cronos.onlinereview.login.LoginActions.logout.AuthResponseParserException= Unexpected error occurred
 
 #  -----  Page /jsp/userError.jsp  -----
+userError.title=Error
 userError.Attention=Attention!
 userError.ErrorPrefix=The following error has occurred:
 userError.Reason=Reason:
