--- a/clients/cronos/applications/online_review/branches/testing_version-2.3_20070416/.classpath
+++ b/clients/cronos/applications/online_review/branches/testing_version-2.3_20070416/.classpath
@@ -82,5 +82,7 @@
 	<classpathentry kind="lib" path="lib/third_party/testing/junit-3.8.1.jar"/>
 	<classpathentry kind="lib" path="lib/third_party/testing/nekohtml-0.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/third_party/testing/strutstest-2.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/tcs/auto_pilot/1.0/auto_pilot.jar"/>
+	<classpathentry kind="lib" path="lib/tcs/pacts_services/PactsServices.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
