add entry for File Upload component

--- a/clients/cronos/applications/online_review/trunk/conf/com/topcoder/util/config/ConfigManager.properties
+++ b/clients/cronos/applications/online_review/trunk/conf/com/topcoder/util/config/ConfigManager.properties
@@ -11,6 +11,8 @@ com.cronos.onlinereview.ajax.factory=OnlineReview.xml
 
 com.topcoder.processor.ipserver=OnlineReview.xml
 com.topcoder.processor.ipserver.message=OnlineReview.xml
+#for the tcs site
+com.topcoder.servlet.request.FileUpload=com/topcoder/servlet/request/FileUpload.xml
 com.topcoder.servlet.request.LocalFileUpload=OnlineReview.xml
 com.topcoder.servlet.request.RemoteFileUpload=OnlineReview.xml
 com.topcoder.util.file=OnlineReview.xml
