changed compile target to 1.5

--- a/clients/cronos/applications/online_review/trunk/scripts/auto_pilot/build.xml
+++ b/clients/cronos/applications/online_review/trunk/scripts/auto_pilot/build.xml
@@ -384,7 +384,10 @@
         <delete failonerror="false">
             <fileset dir="${build_classdir}" includes="com/cronos/onlinereview/phases/*.class"/>
         </delete>
-        <javac srcdir="${javamain}" destdir="${build_classdir}" includes="com/cronos/onlinereview/phases/*.java" debug="true" verbose="${verbose}">
+        <javac srcdir="${javamain}" destdir="${build_classdir}" includes="com/cronos/onlinereview/phases/*.java" 
+        		debug="true" verbose="${verbose}"
+	        	source="1.5" target="1.5"
+        >
             <classpath refid="buildlibs" />
         </javac>
     </target>
